<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/change_color_item"
            android:checkable="false"
            android:title="@string/change_color" />
        <item
            android:id="@+id/about_item"
            android:checkable="false"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/credits" />
        <item
            android:id="@+id/exit_item"
            android:checkable="false"
            android:icon="@android:drawable/ic_lock_lock"
            android:title="@string/exit" />
    </group>
</menu>